# mineru_mcp

./: .gitignore  Dockerfile  README.md  pyproject.toml
src/mineru_mcp/: api.py  converters.py  file_utils.py  result_processor.py  server.py
tests/: test_file_utils.py  test_server.py
